--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+bin
 node_modules
 public
 .tmp
@@ -5,5 +6,5 @@ public
 .idea
 client/bower_components
 dist
-/server/config/local.env.js
+server/config/local.env.js
 wdiff-1.2.2
