--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server/app.js",
   "dependencies": {
     "body-parser": "~1.5.0",
+    "chance": "~0.7.3",
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
     "connect-mongo": "^0.4.1",
@@ -13,6 +14,7 @@
     "express-jwt": "^0.1.3",
     "express-session": "~1.0.2",
     "jade": "~1.2.0",
+    "jsonfile": "~2.0.0",
     "jsonwebtoken": "^0.3.0",
     "lex": "^1.7.8",
     "lodash": "~2.4.1",
