--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router": "^1.0.0",
     "redux": "^3.5.1",
     "redux-router": "^1.0.0-beta5",
-    "reselect": "^2.5.1"
+    "reselect": "^2.5.1",
+    "semantic-ui-react": "^0.61.6"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
