--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 *~
 node_modules
 
+
 # have to add the bundle to version control so deployment with git subtree works
 # browser-bundle.js
-# skeleton.css
 
 browser-bundle.js.map
+npm-debug.log.*
