--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "ebpack --colors",
     "start": "webpack --progress --colors --watch",
-    "serve": "node src/server.js",
+    "serve": "node src/server/index.js",
+    "webpack-stats": "webpack --profile --json > stats.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,8 +15,11 @@
   "dependencies": {
     "babel-preset-es2015-mod": "^6.6.0",
     "babel-preset-es3": "^1.0.1",
+    "body-parser": "^1.15.2",
     "diff": "^3.0.1",
     "express": "^4.14.0",
+    "jsonfile": "^2.4.0",
+    "markdown-it": "^5.1.0",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-redux": "^4.4.6",
@@ -23,14 +27,16 @@
     "redux": "^3.5.1",
     "redux-router": "^1.0.0-beta5",
     "reselect": "^2.5.1",
-    "semantic-ui-react": "^0.61.6"
+    "semantic-ui-react": "^0.61.6",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-preset-react": "^6.3.13",
     "copyfiles": "^0.2.2",
-    "webpack": "^1.12.9"
+    "webpack": "^2.1.0-beta.27"
   }
 }
