--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "dubdiff-2",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server/babel.index.js",
   "scripts": {
     "build": "ebpack --colors",
     "start": "webpack --progress --colors --watch",
-    "serve": "node src/server/index.js",
+    "serve": "node src/server/babel.index.js",
     "webpack-stats": "webpack --profile --json > stats.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,12 +31,14 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.3.26",
+    "babel-core": "^6.18.2",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-es2015-native-modules": "^6.9.4",
+    "babel-preset-node6": "^11.0.0",
     "babel-preset-react": "^6.3.13",
     "copyfiles": "^0.2.2",
+    "piping": "^1.0.0-rc.4",
     "webpack": "^2.1.0-beta.27"
   }
 }
