--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "npm run copy-css && webpack --progress --colors --watch",
     "serve": "node src/server/babel.index.js",
     "webpack-stats": "webpack --profile --json > stats.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --watch --compilers js:babel-register"
+
   },
   "author": "",
   "license": "BSD-2-Clause",
@@ -39,7 +40,10 @@
     "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-preset-node6": "^11.0.0",
     "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
     "copyfiles": "^0.2.2",
+    "mocha": "^3.2.0",
     "piping": "^1.0.0-rc.4",
     "webpack": "^2.1.0-beta.27"
   }
