--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "serve": "node src/server/babel.index.js",
     "webpack-stats": "webpack --profile --json > stats.json",
     "test": "mocha --watch --compilers js:babel-register"
-
   },
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
     "babel-preset-es2015-mod": "^6.6.0",
     "babel-preset-es3": "^1.0.1",
+    "babel-preset-stage-2": "^6.18.0",
     "body-parser": "^1.15.2",
     "diff": "^3.0.1",
     "express": "^4.14.0",
     "jsonfile": "^2.4.0",
     "markdown-it": "^5.1.0",
+    "markdown-to-jsx": "^4.0.3",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-redux": "^4.4.6",
@@ -43,6 +44,7 @@
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "copyfiles": "^0.2.2",
+    "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
     "piping": "^1.0.0-rc.4",
     "webpack": "^2.1.0-beta.27"
