add server rendering of loaded compares and clean up saving of compares, switch to using isomorphic fetch (and save much compiled size)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server/babel.index.js",
   "scripts": {
-    "copy-css": "copyfiles -f ./node_modules/semantic-ui-css/semantic.min.css ./dist",
+    "copy-css": "cpy --parents --cwd=./node_modules/semantic-ui-css semantic.min.css themes/default/assets/fonts/icons.woff2 ../../dist",
     "build": "npm run copy-css && webpack --colors",
     "start": "npm run copy-css && webpack --progress --colors --watch",
     "serve": "node src/server/babel.index.js",
@@ -20,15 +20,15 @@
     "body-parser": "^1.15.2",
     "diff": "^3.0.1",
     "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "jsonfile": "^2.4.0",
     "markdown-it": "^5.1.0",
     "markdown-to-jsx": "^4.0.3",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-redux": "^4.4.6",
-    "react-router": "^1.0.0",
+    "react-router": "~3.0.0",
     "redux": "^3.5.1",
-    "redux-router": "^1.0.0-beta5",
     "redux-thunk": "^2.1.0",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
