--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "copy-css": "cpy --parents --cwd=./node_modules/semantic-ui-css semantic.min.css themes/default/assets/fonts/icons.woff2 ../../dist",
     "build": "npm run copy-css && webpack --progress --colors",
     "build:prod": "npm run copy-css && cross-env NODE_ENV=production webpack -p --progress --colors",
+    "build:prod:nocopy": "cross-env NODE_ENV=production webpack -p --progress --colors",
     "build:watch": "npm run copy-css && webpack --progress --colors --watch",
     "serve": "node src/server/babel.index.js",
     "serve:prod": "cross-env NODE_ENV=production node src/server/babel.index.js",
@@ -49,6 +50,7 @@
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "copyfiles": "^0.2.2",
+    "cpy": "^5.0.0",
     "cross-env": "^3.1.3",
     "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
