--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dubdiff-2",
-  "version": "0.0.0",
+  "name": "dubdiff",
+  "version": "2.0.1",
   "description": "",
   "main": "src/server/babel.index.js",
   "scripts": {
